# nlp-heatmap

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg
heatmap/: config_mapping.yml  heatmap.py  main.py  models.py  report.py
heatmap/templates/: heatmap_data.csv  index.html  index_with_data.html
tests/: test_heatmap.py  test_models.py
tests/data/: config_settings.json  survey.csv  survey.xlsx  survey_long.csv
tests/output/: index.html
