[metadata]
name = nlp_classification_heatmap
version = 0.1.0
author_email = information@mgmt-tech.org
url = https://github.com/IMTorgOpenDataTools/nlp-classification-heatmap
description = Create a D3js heatmap from textual data for reporting.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
    pytest
    pandas
    spacy
    beautifulsoup4
    jinja2
    openpyxl
    python-docx


[options.package_data]
* = .env

[options.entry_points]
console_scripts = 
    sample = sample.core:main